src/scss/drawerr.scss
@import "variables";

/* Drawerr base */
.drawerr {
  position: fixed;
  z-index: 1;
  top: $drawerr-navbar-height;
  width: $drawerr-width;
  height: calc(100% - #{$drawerr-navbar-height});
  overflow-x: hidden;
  overflow-y: auto;
  transform: $drawerr-translate;
  transition: $drawerr-transition;
  background: $drawerr-bg;
  box-shadow: 1px 0px $drawerr-shadow-depth 0px rgba(50, 50, 50, 0.75);

  &::-webkit-scrollbar {
    width: $drawerr-scrollbar;
    height: $drawerr-scrollbar;
  }

  &::-webkit-scrollbar-thumb {
    background: $drawerr-scrollbar-thumb;
    border-radius: 1em;
    cursor: grab;
  }

  &::-webkit-scrollbar-track {
    background: $drawerr-scrollbar-track-color;
  }

  &:not(.drawerr-multilevel) {
    // Depth 1
    ul ul a {
      padding-left: calc(
        #{$drawerr-padding-left} + #{$drawerr-item-padding-indent}
      );
    }

    // Depth 2
    ul ul ul a {
      padding-left: calc(
        #{$drawerr-padding-left} + (#{$drawerr-item-padding-indent} * 2)
      );
    }

    // Depth 3
    ul ul ul ul a {
      padding-left: calc(
        #{$drawerr-padding-left} + (#{$drawerr-item-padding-indent} * 3)
      );
    }
  }

  a:not(.drawerr-navigation) {
    display: flex;
    align-items: center;
    height: $drawerr-item-height;
    padding: $drawerr-padding;
    border-bottom: 1px solid $drawerr-item-border-bottom-color;
    text-decoration: none;
    color: $drawerr-text-color;
    font-size: $drawerr-item-font-size;
    font-weight: $drawerr-item-font-weight;
  }

  ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  a {
    &:hover:not(.drawerr-navigation) {
		background: #fff;
    }

    &.active {
      position: relative;
      color: $drawerr-item-active-color;

      &:last-child:before {
        content: " ";
        position: absolute;
        left: 0;
        top: 0;
        width: 4px;
        background: $drawerr-item-active-before;
      }
    }
  }
}

.drawerr--init {
  display: none;
}

.drawerr--open {
  transform: translateX(0px);
}

.drawerr-slide-from-right {
  transform: translateX($drawerr-translate-rtl);

  &.drawerr--open {
	transform: translateX(calc(100vw - #{$drawerr-width}));
  }
}

/* Hamburger */
.drawerr-btn--active {
  span {
    &:nth-child(1) {
      transform: translateY(5px) rotate(45deg);
    }

    &:nth-child(2) {
      opacity: 0;
    }

    &:nth-child(3) {
      transform: translateY(-12px) rotate(-45deg);
    }
  }
}

.drawerr-btn {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  align-self: center;
  width: $drawerr-hamburger-width;
  height: $drawerr-hamburger-height;
  padding: 0;

  span:not(.drawerr-btn__menu-text) {
    width: inherit;
    height: $drawerr-hamburger-bar-height;
    background: $drawerr-hamburger-bars-bg;
    transition: all 0.3s ease-in-out;
  }
}

.drawerr-btn__menu-text {
  font-size: 0.8rem;
}

.drawerr-btn--has-menu-text {
  height: $drawerr-hamburger-height * 2;
  align-self: flex-end;
}

/* Multilevel */
.drawerr-multilevel {
  > ul {
    position: absolute;
    width: 100%;
    transition: transform 0.4s ease-in;
    transform: translate3d(0, 0px, 0px);
  }

  ul {
    position:relative;
    height:calc(100% - #{$drawerr-navigation-height});
  }

  .drawerr-navigation {
    display: flex;
    align-items: center;
    height:$drawerr-navigation-height;
    //padding: ($drawerr-spacer / 2) $drawerr-spacer;
    padding:$drawerr-padding;
    background: $drawerr-navigation-bg;
    color: $drawerr-navigation-color;
    text-transform: uppercase;
    text-decoration:none;

    &:hover {
      background: $drawerr-navigation-bg;
      text-decoration: none;
    }
  }

  .drawerr-navigation__icon {
    position: absolute;
    width: 0;
    height: 0;
    border-top: 6px solid transparent;
    border-bottom: 6px solid transparent;
    border-right: 6px solid $drawerr-navigation-color;
    opacity: 1;
    transition: opacity 0.3s ease, transform 0.6s ease;
    transform: translateX(0);

    &.hidden {
      opacity: 0;
      transform: translateX(6px);

      + .drawerr-navigation__text {
        transform: translateX(0);
      }
    }

    + .drawerr-navigation__text {
      transition:transform 0.6s ease;
      transform: translateX(12px);
    }
  }

  .drawerr-navigation__text {
    display: block;
    color: $drawerr-navigation-color;
  }

  .drawerr-submenu {
    position: absolute;
    top: 0;
    left: 100%;
    width: 100%;
    height: 100%;
    z-index: 2;
    transition: transform 0.4s ease;
    background: $drawerr-bg;
  }

  .drawerr-item-has-submenu {
    &:after {
      position: absolute;
      right: $drawerr-spacer;
      border-top: 6px solid transparent;
      border-bottom: 6px solid transparent;
      border-left: 6px solid $drawerr-text-color;
      content: "";
    }
  }

  .drawer-item-hashlink {
    display:flex;

    a:first-child {
      flex-grow:2;
      &:after {
        display:none;
      }
    }

    .drawerr-item-has-submenu {
      min-width:65px;
      border-left:1px solid $drawerr-item-border-bottom-color;
    }
  }

  .drawerr-submenu-link {
    @extend .drawerr-item-has-submenu;
  }

  .drawerr-submenu--active {
    z-index: 3;
    transform: translate3d(-100%, 0px, 0px);
  }
}

